refactor: Replace Paths.get() with Path.of() Fixes #1353