@@ -22,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import org.junit.jupiter.api.Test;
 
@@ -35,9 +34,9 @@ public class I18nExtractorTest {
   public void test() {
     I18nExtractor tools = new I18nExtractor();
 
-    Path base = Paths.get(BASE, MODULE);
-    Path src = base.resolve(Paths.get("src", "main"));
-    Path dest = base.resolve(Paths.get("build", "resources", "test"));
+    Path base = Path.of(BASE, MODULE);
+    Path src = base.resolve(Path.of("src", "main"));
+    Path dest = base.resolve(Path.of("build", "resources", "test"));
 
     tools.extract(src, dest, true, true);
 
